--- a/client/style/main.css
+++ b/client/style/main.css
@@ -16,7 +16,7 @@ footer{
 }
 
 nav{
-    text-align: center;
+   text-align: center;
 }
 
 #menu-principal {
@@ -151,6 +151,7 @@ form .group select{
 .submit-group input[type=submit]{
     width: 150px
 }
+
 .submit-group {
     max-width: 500px;
     text-align: right;
@@ -243,4 +244,29 @@ form .group select{
 
 #tableFiltres {
     display: inline-block;
+}
+.boutonConnexion{
+    padding-right: 50px;
+    text-align: right;
+    position: absolute;
+    top: 92px;
+    right: 10px;
+}
+
+.col-sm-4{
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 40px;
+}
+
+.bouton_Connexion{
+    width: 100%;
+    height: 50px;
+    line-height: 70px;
+}
+
+#inscription a:link{
+    width: 100%;
+    height: 50px;
+    line-height: 70px;
 }
