Bouton connexion, page de connexion, enregistrement d'un nouveau client lors de l'inscription,  connexion d'un client avec ses infos

--- a/client/style/main.css
+++ b/client/style/main.css
@@ -245,7 +245,7 @@ form .group select{
     display: inline-block;
 }
 
-.boutonConnexion{
+#boutonConnexion{
     padding-right: 50px;
     text-align: right;
     position: absolute;
