--- a/client/style/main.css
+++ b/client/style/main.css
@@ -268,3 +268,9 @@ form .group select{
     position: absolute;
     left: 17%;
 }
+
+#vente_table {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
